--- a/trunk/mscore/mscore/album.ui
+++ b/trunk/mscore/mscore/album.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>357</width>
+    <width>365</width>
     <height>318</height>
    </rect>
   </property>
@@ -22,12 +22,16 @@
      <item>
       <widget class="QLabel" name="label">
        <property name="text">
-        <string>Album:</string>
+        <string>Album Name:</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="albumName"/>
+      <widget class="QLineEdit" name="albumName">
+       <property name="toolTip">
+        <string>album name</string>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
@@ -48,16 +52,26 @@
      </item>
      <item row="5" column="1">
       <widget class="QPushButton" name="remove">
+       <property name="toolTip">
+        <string>remove current score</string>
+       </property>
        <property name="text">
-        <string>Remove</string>
+        <string>Remove Score</string>
        </property>
       </widget>
      </item>
      <item row="2" column="0" rowspan="4">
-      <widget class="QListWidget" name="scoreList"/>
+      <widget class="QListWidget" name="scoreList">
+       <property name="toolTip">
+        <string>score list</string>
+       </property>
+      </widget>
      </item>
      <item row="3" column="1">
       <widget class="QPushButton" name="down">
+       <property name="toolTip">
+        <string>move current score down in list</string>
+       </property>
        <property name="text">
         <string>Down</string>
        </property>
@@ -65,6 +79,9 @@
      </item>
      <item row="2" column="1">
       <widget class="QPushButton" name="up">
+       <property name="toolTip">
+        <string>move current score up in list</string>
+       </property>
        <property name="text">
         <string>Up</string>
        </property>
@@ -77,15 +94,22 @@
      <item>
       <widget class="QPushButton" name="add">
        <property name="text">
-        <string>Add</string>
+        <string>Add Score</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="scoreName"/>
+      <widget class="QLineEdit" name="scoreName">
+       <property name="toolTip">
+        <string>path to new score you want to add</string>
+       </property>
+      </widget>
      </item>
      <item>
       <widget class="QToolButton" name="fileDialog">
+       <property name="toolTip">
+        <string>open file manager</string>
+       </property>
        <property name="text">
         <string>...</string>
        </property>
@@ -100,6 +124,9 @@
      </property>
      <item>
       <widget class="QPushButton" name="createNew">
+       <property name="toolTip">
+        <string>create new album</string>
+       </property>
        <property name="text">
         <string>New</string>
        </property>
@@ -107,6 +134,9 @@
      </item>
      <item>
       <widget class="QPushButton" name="load">
+       <property name="toolTip">
+        <string>load an existing album</string>
+       </property>
        <property name="text">
         <string>Load</string>
        </property>
@@ -128,7 +158,7 @@
      <item>
       <widget class="QPushButton" name="print">
        <property name="text">
-        <string>Print</string>
+        <string>Print Album</string>
        </property>
       </widget>
      </item>
