--- a/trunk/mscore/mscore/editstyle.ui
+++ b/trunk/mscore/mscore/editstyle.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>732</width>
+    <width>747</width>
     <height>500</height>
    </rect>
   </property>
@@ -2757,7 +2757,7 @@ p, li { white-space: pre-wrap; }
           <item row="0" column="0">
            <widget class="QLabel" name="label_8">
             <property name="text">
-             <string>Line width</string>
+             <string>Line width:</string>
             </property>
            </widget>
           </item>
@@ -2784,7 +2784,7 @@ p, li { white-space: pre-wrap; }
           <item row="1" column="0">
            <widget class="QLabel" name="label_9">
             <property name="text">
-             <string>Height</string>
+             <string>Height:</string>
             </property>
            </widget>
           </item>
@@ -2798,7 +2798,7 @@ p, li { white-space: pre-wrap; }
           <item row="2" column="0">
            <widget class="QLabel" name="label_10">
             <property name="text">
-             <string>Line break height</string>
+             <string>Line break height:</string>
             </property>
            </widget>
           </item>
@@ -2867,7 +2867,7 @@ p, li { white-space: pre-wrap; }
             </property>
            </widget>
           </item>
-          <item row="2" column="0">
+          <item row="3" column="0">
            <spacer name="verticalSpacer_13">
             <property name="orientation">
              <enum>Qt::Vertical</enum>
@@ -2883,12 +2883,30 @@ p, li { white-space: pre-wrap; }
           <item row="1" column="0">
            <widget class="QLabel" name="label_42">
             <property name="text">
-             <string>Hook height</string>
+             <string>Hook height:</string>
             </property>
            </widget>
           </item>
           <item row="1" column="1">
-           <widget class="QDoubleSpinBox" name="voltaHook"/>
+           <widget class="QDoubleSpinBox" name="voltaHook">
+            <property name="suffix">
+             <string>sp</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="0">
+           <widget class="QLabel" name="label_64">
+            <property name="text">
+             <string>Line width:</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="1">
+           <widget class="QDoubleSpinBox" name="voltaLineWidth">
+            <property name="suffix">
+             <string>sp</string>
+            </property>
+           </widget>
           </item>
          </layout>
         </widget>
