--- a/mscore/mscore/prefsdialog.ui
+++ b/mscore/mscore/prefsdialog.ui
@@ -69,7 +69,7 @@
       <string/>
      </property>
      <property name="currentIndex">
-      <number>0</number>
+      <number>4</number>
      </property>
      <widget class="QWidget" name="tab">
       <property name="accessibleName">
@@ -1559,7 +1559,7 @@
           <item row="0" column="2">
            <widget class="QToolButton" name="instrumentListButton">
             <property name="text">
-             <string>Browse...</string>
+             <string/>
             </property>
            </widget>
           </item>
@@ -1582,6 +1582,36 @@
              <string/>
             </property>
            </widget>
+          </item>
+          <item row="2" column="0">
+           <widget class="QLabel" name="label_28">
+            <property name="text">
+             <string>Style for Part:</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="1">
+           <widget class="QLineEdit" name="partStyle"/>
+          </item>
+          <item row="2" column="2">
+           <widget class="QToolButton" name="partStyleButton">
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="0">
+           <spacer name="verticalSpacer_2">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>20</width>
+              <height>40</height>
+             </size>
+            </property>
+           </spacer>
           </item>
          </layout>
         </widget>
