--- a/trunk/mscore/mscore/album.ui
+++ b/trunk/mscore/mscore/album.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>365</width>
+    <width>431</width>
     <height>318</height>
    </rect>
   </property>
@@ -138,7 +138,7 @@
         <string>load an existing album</string>
        </property>
        <property name="text">
-        <string>Load</string>
+        <string/>
        </property>
       </widget>
      </item>
@@ -159,6 +159,13 @@
       <widget class="QPushButton" name="print">
        <property name="text">
         <string>Print Album</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="createScore">
+       <property name="text">
+        <string>Join Scores</string>
        </property>
       </widget>
      </item>
