--- a/trunk/mscore/mscore/sectionbreak.ui
+++ b/trunk/mscore/mscore/sectionbreak.ui
@@ -7,14 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>459</width>
-    <height>152</height>
+    <height>164</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MuseScore: Section Break Properties</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0" rowspan="5">
+   <item row="0" column="0" rowspan="6">
     <widget class="QLabel" name="label_3">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Fixed" vsizetype="Ignored">
@@ -30,7 +30,7 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="1">
+   <item row="4" column="1">
     <spacer name="verticalSpacer_2">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -102,7 +102,7 @@
      </property>
     </spacer>
    </item>
-   <item row="4" column="1" colspan="2">
+   <item row="5" column="1" colspan="2">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -116,6 +116,13 @@
     <widget class="QCheckBox" name="_startWithLongNames">
      <property name="text">
       <string>start new section with long instrument names</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="1">
+    <widget class="QCheckBox" name="_startWithMeasureOne">
+     <property name="text">
+      <string>start new section with measure number one</string>
      </property>
     </widget>
    </item>
