--- a/trunk/mscore/mscore/musescore.qrc
+++ b/trunk/mscore/mscore/musescore.qrc
@@ -160,6 +160,7 @@
       <file>data/icons/format_list_ordered.svgz</file>
       <file>data/icons/format_indent_more.svgz</file>
       <file>data/icons/format_indent_less.svgz</file>
+      <file>data/icons/community.svg</file>
 
       <file>data/icons-dark/minus.svg</file>
       <file>data/icons-dark/flip.svg</file>
@@ -275,5 +276,6 @@
       <file>data/icons-dark/format_list_ordered.svgz</file>
       <file>data/icons-dark/format_indent_more.svgz</file>
       <file>data/icons-dark/format_indent_less.svgz</file>
+      <file>data/icons-dark/community.svg</file>
    </qresource>
 </RCC>
