--- a/trunk/mscore/mscore/prefsdialog.ui
+++ b/trunk/mscore/mscore/prefsdialog.ui
@@ -491,58 +491,24 @@
           <property name="spacing">
            <number>3</number>
           </property>
-          <item row="0" column="0">
-           <widget class="QLabel" name="label_17">
-            <property name="text">
-             <string>Play Panel:</string>
-            </property>
-            <property name="textFormat">
-             <enum>Qt::PlainText</enum>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="1">
+          <item row="1" column="0">
            <widget class="QCheckBox" name="playPanelShow">
             <property name="text">
-             <string>show</string>
+             <string>Show Play Panel</string>
             </property>
            </widget>
           </item>
-          <item row="0" column="2">
-           <widget class="QSpinBox" name="playPanelX">
-            <property name="maximum">
-             <number>9999</number>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="3">
-           <widget class="QSpinBox" name="playPanelY">
-            <property name="maximum">
-             <number>9999</number>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="4">
-           <widget class="QToolButton" name="playPanelCur">
+          <item row="3" column="0">
+           <widget class="QCheckBox" name="navigatorShow">
             <property name="text">
-             <string>Use Current Position</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="0">
-           <widget class="QLabel" name="label_19">
-            <property name="text">
-             <string>Navigator:</string>
-            </property>
-            <property name="textFormat">
-             <enum>Qt::PlainText</enum>
+             <string>Show Navigator</string>
             </property>
            </widget>
           </item>
           <item row="1" column="1">
-           <widget class="QCheckBox" name="navigatorShow">
+           <widget class="QCheckBox" name="webPanelShow">
             <property name="text">
-             <string>show</string>
+             <string>Show MuseScore Universe</string>
             </property>
            </widget>
           </item>
@@ -2781,7 +2747,7 @@
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="mscore.qrc"/>
+  <include location="musescore.qrc"/>
  </resources>
  <connections/>
 </ui>
