--- a/mscore/mscore/synthcontrol.ui
+++ b/mscore/mscore/synthcontrol.ui
@@ -347,7 +347,14 @@
             </widget>
            </item>
            <item row="2" column="1">
-            <widget class="QDoubleSpinBox" name="chorusSpeedBox"/>
+            <widget class="QDoubleSpinBox" name="chorusSpeedBox">
+             <property name="maximum">
+              <double>50.000000000000000</double>
+             </property>
+             <property name="singleStep">
+              <double>0.100000000000000</double>
+             </property>
+            </widget>
            </item>
            <item row="2" column="2">
             <widget class="Awl::Slider" name="chorusSpeed">
@@ -370,7 +377,14 @@
             </widget>
            </item>
            <item row="3" column="1">
-            <widget class="QDoubleSpinBox" name="chorusDepthBox"/>
+            <widget class="QDoubleSpinBox" name="chorusDepthBox">
+             <property name="maximum">
+              <double>100.000000000000000</double>
+             </property>
+             <property name="singleStep">
+              <double>2.000000000000000</double>
+             </property>
+            </widget>
            </item>
            <item row="3" column="2">
             <widget class="Awl::Slider" name="chorusDepth">
